# HW8_WEB

HW81_WEB/: config.ini  connect.py  create.py  main.py  pyproject.toml
HW82_WEB/: config.ini  consumer.py  models.py  producer.py  pyproject.toml
