[tool.poetry]
name = "hw8-web"
version = "0.1.0"
description = ""
authors = ["HelenNad <htkachenko88@gmail.com>"]
readme = "README.md"
packages = [{include = "hw8_web"}]

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.27.0"
pymongo = "^4.3.3"
dnspython = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
